# Mufflon

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  mufflon.sln  mufflon.sln.DotSettings  readme.md
doc/: BlenderMaterials.md  FileFormat.md  Layout.md  MVVM_Pattern.md  Readme.md  Requirements.md  Structure.md
doc/DesignDecisions/: A0_NamingConventions.md  A10_ConstNames.md  A11_AdaptiveTesselation.md  A12_NonTransformationOfSpheres.md  A1_CodeReduncy.md  A2_Libraries.md  A3_GeometrySupport.md  A4_LightTree.md  A5_CpuParallelization.md  A6_BlenderLODs.md  A7_PathVertexLayout.md  A8_GeometryInvariants.md  A9_ConstMaterials.md  Libraries.md
doc/Diagrams/: mvvm.uxf
doc/Math/: quad_surface_area.wxm
examples/: README  example.c  example.cpp  example.py
project_files/core/: core.vcxproj  core.vcxproj.filters
project_files/gliloader/: gliloader.vcxproj  gliloader.vcxproj.filters
project_files/gui/: AndBooleanConverter.cs  App.config  App.xaml  App.xaml.cs  InvBooleanToVisibilityConverter.cs  InvertVisibilityConverter.cs  MainWindow.xaml  MainWindow.xaml.cs  NegateBooleanConverter.cs  gui.csproj  log.txt  settings.json
project_files/gui/Command/: ActionCommand.cs  AddCameraCommand.cs  AddLightCommand.cs  AddMaterialCommand.cs  AddRecursiveMaterialCommand.cs  AdjustGammaCommand.cs  EnterFreeFlightMode.cs  IGesturedCommand.cs  LoadSceneCommand.cs  OpenSettingsCommand.cs  PerformIterationsCommand.cs  PerformIterationsDialogCommand.cs  PerformNIterationsCommand.cs  PlayPauseCommand.cs  RemoveCameraCommand.cs  RemoveLightCommand.cs  RemoveMaterialCommand.cs  RenderSequenceCommand.cs  ResetCameraCommand.cs  ResetCommand.cs  SaveDenoisedScreenshotCommand.cs  SaveSceneCommand.cs  ScreenShotCommand.cs  SelectRendererCommand.cs  SelectTextureCommand.cs  SetDialogResultCommand.cs  ToggleCameraMovementCommand.cs
project_files/gui/Controller/: CameraController.cs
project_files/gui/Dll/: Core.cs  Gdi32.cs  Loader.cs  Logger.cs  OpenGLHost.cs  OpenGl32.cs  OpenGlDisplay.cs  user32.cs
project_files/gui/Model/: AppModel.cs  CameraModel.cs  LightModel.cs  MaterialModel.cs  Models.cs  RenderTargetSelectionModel.cs  RendererModel.cs  SceneModel.cs  SettingsModel.cs  StatusbarModel.cs  ToolbarModel.cs  ViewportModel.cs
project_files/gui/Properties/: Annotations.cs  AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs  Settings.settings
project_files/gui/Utility/: BoundingBox.cs  ObservableDictionary.cs  ObservableHashSet.cs  StringUtil.cs  SynchronizedModelList.cs  SynchronizedViewModelList.cs  Vec2.cs  Vec3.cs
project_files/gui/View/: AnimationFrameView.xaml  AnimationFrameView.xaml.cs  AppSettings.xaml  AppSettings.xaml.cs  AppSettingsView.xaml.cs  ConsoleView.xaml  ConsoleView.xaml.cs  IterateNDialog.xaml  IterateNDialog.xaml.cs  RenderTargetSelectionView.xaml  RenderTargetSelectionView.xaml.cs  ScenarioLoadStatus.xaml  ScenarioLoadStatus.xaml.cs  SceneLoadStatus.xaml  SceneLoadStatus.xaml.cs  SettingsView.xaml  SettingsView.xaml.cs  StatusbarView.xaml  StatusbarView.xaml.cs  TessellationView.xaml  TessellationView.xaml.cs  ToolbarView.xaml  ToolbarView.xaml.cs
project_files/gui/ViewModel/: AddPropertyViewModel.cs  AnimationFrameViewModel.cs  ConsoleInputViewModel.cs  ConsoleOutputViewModel.cs  ConsoleViewModel.cs  KeyGestureViewModel.cs  ProfilerViewModel.cs  RenderTargetSelectionViewModel.cs  RendererViewModel.cs  SceneViewModel.cs  SelectRendererViewModel.cs  StatusbarViewModel.cs  TessellationViewModel.cs  ToolbarViewModel.cs  ViewModels.cs  ViewportViewModel.cs
project_files/loader/: loader.vcxproj  loader.vcxproj.filters
project_files/mffloader/: mffloader.vcxproj  mffloader.vcxproj.filters
project_files/mufflon/: mufflon.vcxproj  mufflon.vcxproj.filters
project_files/opengldisplay/: opengldisplay.vcxproj  opengldisplay.vcxproj.filters
project_files/pfmloader/: pfmloader.vcxproj  pfmloader.vcxproj.filters
project_files/pythonbinding/: pythonbinding.pyproj
project_files/renderer/: renderer.vcxproj  renderer.vcxproj.filters
project_files/scene/: scene.vcxproj  scene.vcxproj.filters
project_files/scene/Debug/: vc141.idb
project_files/stbiloader/: stbiloader.vcxproj  stbiloader.vcxproj.filters
resources/ltc/: info.txt  ltc_1.dds  ltc_2.dds  ltc_beckmann_1.dds  ltc_beckmann_2.dds  ltc_ggx_1.dds  ltc_ggx_2.dds
src/: test.cpp
src/core/: concepts.hpp  cuda_test.cu  cuda_test.hpp  interface.cpp  interface.h  mesh_test.cpp  mesh_test.hpp  test.cpp
src/core/cameras/: camera.cpp  camera.hpp  camera_sampling.hpp  focus.cpp  focus.hpp  pinhole.cpp  pinhole.hpp  sample.hpp
src/core/cuda/: cu_lib_wrapper.cu  cu_lib_wrapper.h  cu_lib_wrapper.hpp  cuda_utils.hpp  error.hpp  memory.hpp
src/core/data_structs/: count_octree.hpp  dm_hashgrid.cpp  dm_hashgrid.hpp  dm_octree.cpp  dm_octree.hpp  kdtree.hpp  photon_map.hpp
src/core/export/: api.h  core_interface.h  interface.cpp  interface.h  texture_data.h
src/core/math/: curvature.hpp  functions.hpp  intersection_areas.hpp  rng.hpp  (+4 more)
src/exec/: test.cpp
src/export/: api.hpp  dll_export.hpp  interface.cpp  interface.h
src/gliloader/: interface.cpp  interface.h
src/pfmloader/: interface.cpp
src/plugin/: plugin.cpp  plugin.hpp  texture_interface.h  texture_plugin.cpp  texture_plugin.hpp  texture_plugin_interface.h
src/profiler/: cpu_profiler.cpp  cpu_profiler.hpp  gpu_profiler.cpp  gpu_profiler.hpp  profiling.cpp  profiling.hpp
src/pythonbinding/: bindings.py  example.py
src/stbiloader/: interface.cpp  interface.h
src/util/: array_wrapper.hpp  assert.cpp  assert.hpp  byte_io.cpp  byte_io.hpp  cie_xyz.cpp  cie_xyz.hpp  degrad.hpp  dyntype_memory.hpp  eviction.hpp  filesystem.hpp  fixed_hashmap.hpp  flag.hpp  indexed_string_map.hpp  int_types.hpp  log.cpp  log.hpp  parallel.cpp  parallel.hpp  pixel_conversion.hpp  punning.hpp  range.hpp  string_pool.cpp  string_pool.hpp  string_view.cpp  string_view.hpp  swapped_vector.hpp  tagged_tuple.hpp  type_helpers.hpp  types.cpp  types.hpp  vectors.hpp
x64/Release/: opengldisplay.exp  opengldisplay.iobj  opengldisplay.ipdb  opengldisplay.lib
(+576 files in other folders)
